--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kpimtextedit-24.01.95.tar.xz: ac5afe03c59ebbff363f52f2516d33d1d0bda6c2
+  kpimtextedit-20240217.tar.bz2: 6bdda4f2f983634c132a5431d7acc6a3a5dcc9c7
