--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   kpimtextedit-20240217.tar.bz2: 6bdda4f2f983634c132a5431d7acc6a3a5dcc9c7
+  kpimtextedit-24.02.0.tar.xz: bc0f5c54f1f47e96df900e45f7694e84fe9671fa
